--- a/.github/workflows/ci-app.yml
+++ b/.github/workflows/ci-app.yml
@@ -6,5 +6,5 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - run: make setup
-            - run: test
-            - run: lint
+            - run: make test
+            - run: make lint
