--- a/.github/workflows/ci-app.yml
+++ b/.github/workflows/ci-app.yml
@@ -5,6 +5,11 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
-            - run: make setup
+            - uses: actions/setup-node@v4
+              with:
+                node-version: '18.x'
+                cache: 'npm'
+            - run: make install
             - run: make test
             - run: make lint
+            - uses: hexlet-components/hello-from-hexlet-action@release
